fix input box border style

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -124,6 +124,8 @@ html {
   input[type="text"],textarea,input[type="text"]:focus,textarea:focus{
     background-color: var(--bg-color);
     color: var(--font-color);
+    outline: none;
+    border: 1px solid var(--border-color);
   }
 
   input[type="text"]:focus, textarea:focus{
