fix accepted color problem

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -91,7 +91,7 @@ html {
     --bg-previous-change: #4C1919;
     --bg-previous-change-deep: #701414;
     --bg-fade:#513f3f;
-    --bg-change-accepted:#b9d5f6;
+    --bg-change-accepted:#48484d;
     --scroll-bar-color:rgba(119, 118, 119, 0.722);
     --outline-color:rgb(169, 165, 165);
     --branch-line-color:rgb(3, 86, 27);
