diplay context in modified change view

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -381,7 +381,7 @@ html {
   padding-bottom: 4px;
 }
 
-.commitContext{
+.commitContext, .context{
   .modal-content{
     border-radius: 0 !important;
   }
