--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -643,3 +643,7 @@ to {
 .react-datepicker__year-option:hover, .react-datepicker__month-option:hover, .react-datepicker__month-year-option:hover{
   background-color: var(--bg-select-color);
 }
+
+input[type=checkbox]{
+  background-color: #fff;
+}
