handle hover effect

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -647,3 +647,8 @@ to {
 input[type=checkbox]{
   background-color: #fff;
 }
+
+.hover-danger:hover, .hover-danger:hover *{
+  cursor: default;
+  color: var(--gs-danger);
+}
